tested scraper_1_urls import.  more refactoring

--- a/scraper/scraper_dev.ipynb
+++ b/scraper/scraper_dev.ipynb
@@ -1440,6 +1440,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scraper_1_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
