--- a/scraper/scraper_dev.ipynb
+++ b/scraper/scraper_dev.ipynb
@@ -1440,11 +1440,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('--4B6GkzqEh3P_ajSEmFiA'),\n",
+       " ('--AIejt3-PlyBXiHN6K2Fw'),\n",
+       " ('--IGa7X4ieb8fNm5rNzrvQ'),\n",
+       " ('--VjfxUMOGhLqkOSPJffDg'),\n",
+       " ('--_8QUvrkpWzXVb_Ve1FBQ'),\n",
+       " ('--l-lpvIYf6Hx2n6hZSl9w'),\n",
+       " ('--tfSO7rvBkKMIjzCEXdsg'),\n",
+       " ('-0C-F4Y6r_2lJuJkC1TQAw'),\n",
+       " ('-0L27cGChFM5-h9qpDM4aA'),\n",
+       " ('-0LnDrcF1I4DJusqgMANSQ')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import scraper_1_urls"
+    "# Get all Business_ID's.  Will only search for business_id's not in reviews\n",
+    "from read_query import non_reviewed_businesses\n",
+    "\n",
+    "list_to_search = non_reviewed_businesses()\n",
+    "list_to_search[0:10]"
    ]
   },
   {
@@ -1452,7 +1476,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build client query function and implement in List Scraper"
+   ]
   }
  ],
  "metadata": {
