--- a/scraper/scraper_dev.ipynb
+++ b/scraper/scraper_dev.ipynb
@@ -1440,25 +1440,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('--4B6GkzqEh3P_ajSEmFiA'),\n",
-       " ('--AIejt3-PlyBXiHN6K2Fw'),\n",
-       " ('--IGa7X4ieb8fNm5rNzrvQ'),\n",
-       " ('--VjfxUMOGhLqkOSPJffDg'),\n",
-       " ('--_8QUvrkpWzXVb_Ve1FBQ'),\n",
-       " ('--l-lpvIYf6Hx2n6hZSl9w'),\n",
-       " ('--tfSO7rvBkKMIjzCEXdsg'),\n",
-       " ('-0C-F4Y6r_2lJuJkC1TQAw'),\n",
-       " ('-0L27cGChFM5-h9qpDM4aA'),\n",
-       " ('-0LnDrcF1I4DJusqgMANSQ')]"
+       "['--4B6GkzqEh3P_ajSEmFiA',\n",
+       " '--IGa7X4ieb8fNm5rNzrvQ',\n",
+       " '--VjfxUMOGhLqkOSPJffDg',\n",
+       " '--_8QUvrkpWzXVb_Ve1FBQ',\n",
+       " '--l-lpvIYf6Hx2n6hZSl9w',\n",
+       " '--tfSO7rvBkKMIjzCEXdsg',\n",
+       " '-0C-F4Y6r_2lJuJkC1TQAw',\n",
+       " '-0L27cGChFM5-h9qpDM4aA',\n",
+       " '-0LnDrcF1I4DJusqgMANSQ',\n",
+       " '-0UGg-c1b-bRJVWtFu8Y5A']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,12 +1473,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Environment variables set.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'review_id': 's6nijoIUWr6Qun8X3XhIqQ',\n",
+       "  'date': datetime.datetime(2019, 8, 10, 17, 6, 32),\n",
+       "  'text': \"Great place, really took us around the city and had a great time. Really a great way to see the entire city in two hours. Highly recommend it and you'll...\",\n",
+       "  'user_id': 'yjUwtqAygWaOahxEW-6I1A',\n",
+       "  'business_id': '--AIejt3-PlyBXiHN6K2Fw'},\n",
+       " {'review_id': 'O11uxD3lAXo_RVowh_UE3w',\n",
+       "  'date': datetime.datetime(2019, 1, 20, 13, 10, 38),\n",
+       "  'text': 'What an awesome Segway tour. James went all around town and we saw a little bit of everything- the hills, historical sites, the beaches, seals and sea...',\n",
+       "  'user_id': 'z7QrqeTGh2XuTOLszkPizA',\n",
+       "  'business_id': '--AIejt3-PlyBXiHN6K2Fw'},\n",
+       " {'review_id': '0x9j_5e--Y0pMaEV7QXPfw',\n",
+       "  'date': datetime.datetime(2018, 4, 22, 11, 19, 54),\n",
+       "  'text': \"I wasn't sure if I should give 3 or 4 stars. \\n\\nOverall we had a good time. We booked without incident and even changed to an earlier time of day a couple...\",\n",
+       "  'user_id': 'LJgwDW0Rnxbwd8NAGu3CJg',\n",
+       "  'business_id': '--AIejt3-PlyBXiHN6K2Fw'}]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Build client query function and implement in List Scraper\n",
+    "from scraper_1_reviews import review_search\n",
+    "\n",
+    "test_id = '--AIejt3-PlyBXiHN6K2Fw'\n",
+    "response = review_search(test_id)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build client query function and implement in List Scraper"
+    "# Save reviews\n",
+    "from scraper_1_reviews import save_reviews\n",
+    "\n",
+    "save_reviews(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trying with shortlist and ListScraper class\n",
+    "from scrapers import ListScraper\n",
+    "\n",
+    "temp_list = list_to_search[0:20]\n",
+    "scraper = ListScraper(temp_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Environment variables set.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scraper.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(scraper.complete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
