reviews exporter and functional dependencies up.

--- a/scraper/scraper_dev.ipynb
+++ b/scraper/scraper_dev.ipynb
@@ -1446,16 +1446,16 @@
     {
      "data": {
       "text/plain": [
-       "['--4B6GkzqEh3P_ajSEmFiA',\n",
-       " '--IGa7X4ieb8fNm5rNzrvQ',\n",
-       " '--VjfxUMOGhLqkOSPJffDg',\n",
-       " '--_8QUvrkpWzXVb_Ve1FBQ',\n",
-       " '--l-lpvIYf6Hx2n6hZSl9w',\n",
-       " '--tfSO7rvBkKMIjzCEXdsg',\n",
-       " '-0C-F4Y6r_2lJuJkC1TQAw',\n",
-       " '-0L27cGChFM5-h9qpDM4aA',\n",
-       " '-0LnDrcF1I4DJusqgMANSQ',\n",
-       " '-0UGg-c1b-bRJVWtFu8Y5A']"
+       "['-4ExsaXMD5Fp5n_KlVW58A',\n",
+       " '-4iABQSTGDWP8H1iKZslqw',\n",
+       " '-4qYiz-v0iL65HR_qOeIog',\n",
+       " '-4tLj2g98PL7HtbCl8zVvw',\n",
+       " '-5NqhoyCkgvqYFM9zAB1og',\n",
+       " '-5OJGc4rpOHzZQcgyMb1PQ',\n",
+       " '-5PuB75nReYddFPoCFG30g',\n",
+       " '-5aDiS3fa8q0lTCwoLPqaQ',\n",
+       " '-5utcIR0amZbWfEWNi3rtw',\n",
+       " '-63IXvz-BkIml8nH33Ty1Q']"
       ]
      },
      "execution_count": 1,
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1489,21 +1489,24 @@
        "[{'review_id': 's6nijoIUWr6Qun8X3XhIqQ',\n",
        "  'date': datetime.datetime(2019, 8, 10, 17, 6, 32),\n",
        "  'text': \"Great place, really took us around the city and had a great time. Really a great way to see the entire city in two hours. Highly recommend it and you'll...\",\n",
+       "  'stars': 5,\n",
        "  'user_id': 'yjUwtqAygWaOahxEW-6I1A',\n",
        "  'business_id': '--AIejt3-PlyBXiHN6K2Fw'},\n",
        " {'review_id': 'O11uxD3lAXo_RVowh_UE3w',\n",
        "  'date': datetime.datetime(2019, 1, 20, 13, 10, 38),\n",
        "  'text': 'What an awesome Segway tour. James went all around town and we saw a little bit of everything- the hills, historical sites, the beaches, seals and sea...',\n",
+       "  'stars': 5,\n",
        "  'user_id': 'z7QrqeTGh2XuTOLszkPizA',\n",
        "  'business_id': '--AIejt3-PlyBXiHN6K2Fw'},\n",
        " {'review_id': '0x9j_5e--Y0pMaEV7QXPfw',\n",
        "  'date': datetime.datetime(2018, 4, 22, 11, 19, 54),\n",
        "  'text': \"I wasn't sure if I should give 3 or 4 stars. \\n\\nOverall we had a good time. We booked without incident and even changed to an earlier time of day a couple...\",\n",
+       "  'stars': 4,\n",
        "  'user_id': 'LJgwDW0Rnxbwd8NAGu3CJg',\n",
        "  'business_id': '--AIejt3-PlyBXiHN6K2Fw'}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1531,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,23 +1547,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Environment variables set.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1576,7 @@
        "20"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
