added paths module

--- a/scraper/pathing_dev.ipynb
+++ b/scraper/pathing_dev.ipynb
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,11 +464,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Points along path\n",
+    "\n",
+    "Function that yields points along a path to pass to model map for predictions.\n",
+    "\n",
+    "Given path_type = 'sprial', a, theta, and d_theta: return n points along path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pi"
+   ]
   },
   {
    "cell_type": "code",
