--- a/scraper/pathing_dev.ipynb
+++ b/scraper/pathing_dev.ipynb
@@ -574,7 +574,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fbf37ef9e90>"
+       "<matplotlib.collections.PathCollection at 0x7f9a2321b110>"
       ]
      },
      "execution_count": 7,
@@ -613,7 +613,7 @@
    "source": [
     "### Sample path \n",
     "\n",
-    "Return a set of coordinates given d_theta (not varying a) for the spiral path"
+    "Return a set of coordinates given d_theta (not varying a) for the spiral path.  This is path specific at present.  Maybe making move more transient in the future would help this."
    ]
   },
   {
