fixed delta logic in spiral path

--- a/scraper/scraper_dev.ipynb
+++ b/scraper/scraper_dev.ipynb
@@ -1590,7 +1590,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Stopping Scraper Job\n",
+    "\n",
+    "The job is complete when the center is reached or no new findings occurs for a time.  "
+   ]
   }
  ],
  "metadata": {
